package UserManagent;

public class PostgresFactory extends AbstractFactory{
    public PostgresFactory(){}

    public static PostgresFactory createFactory(){
        return null;}

    @Override
    public UserDAO createUserDAO() {
        return null;
        // TODO Auto-generated method stub
        
    }


    
}